--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,5 +1,5 @@
 # tmuxを256色表示できるようにする
-set-option -g default-terminal screen-256color
+set-option -g default-terminal xterm-256color
 set -g terminal-overrides 'xterm:colors=256'
 
 # 2重tmuxでもクリップボードコピーできるようにする OSC52
