--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -20,6 +20,7 @@ ansible
 
 {{- if not .isWork }}
 .zshrc.d/work.zsh
+.bashrc.d/work.bash
 {{- end }}
 
 {{- if not (and (.isLinux) (not .isCentOS)) }}
