--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -24,6 +24,7 @@ win-wezterm.sh
 
 {{- if not .isWork }}
 .zshrc.d/work.zsh
+.config/nvim/lua/custom/work/
 {{- end }}
 
 {{- if not (and (.isLinux) (not .isCentOS)) }}
